# quarto

./: demo.py  pyproject.toml
quarto/mcts/: cumdict.py  dummy_executor.py  expand.py  measures.py  node.py  policies.py  search.py  select.py  simulate.py  stoppers.py
quarto/mindag/: board.py  compression.py  dag.py  ordering.py  pieces.py
quarto/mtdf/: mtdf.py
quarto/representation/: constants.py  logic.py  move.py  payoffs.py  phase.py  piece.py  player.py  square.py
tests/: compression.py  compression_battle.py  compression_oop.prof  equivalent_states.py  mcts.py  representation.py  representation_oop.prof  tmp.prof
tests/compression/: available.pkl  compressor.py  free.pkl  pieces.py  squares.py
tests/minidag/: 2pieces.pkl  2squares.pkl  3pieces.pkl  3squares.pkl  4pieces.pkl  alphabeta.py  compression.py  dag.py  minimax.py  pieces.py  squares.py
tests/minidag2/: abminimax.py  alphabeta.py  board.py  compression.py  minimax.py  pieces.py
tests/transpositions/: hashing.py  pieces.py  squares.py  test.py
